[HFS-511] - Display Calculations Direct Debit Charge

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -106,10 +106,10 @@ jobs:
       - setup_remote_docker
       - run:
           name: build
-          command: docker-compose build base-listener-test
+          command: docker-compose build direct-debit-submission-test
       - run:
           name: Run tests
-          command: docker-compose run base-listener-test
+          command: docker-compose run direct-debit-submission-test
   assume-role-development:
     executor: docker-python
     steps:
