--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,7 @@ orbs:
   aws-ecr: circleci/aws-ecr@3.0.0
   aws-cli: circleci/aws-cli@0.1.9
   aws_assume_role: lbh-hackit/aws_assume_role@0.1.0
+  sonarcloud: sonarsource/sonarcloud@1.0.2
 
 executors:
   docker-python:
@@ -104,6 +105,7 @@ jobs:
     steps:
       - checkout
       - setup_remote_docker
+      - sonarcloud/scan
       - run:
           name: build
           command: docker-compose build base-listener-test
@@ -162,95 +164,94 @@ jobs:
 workflows:
   check-and-deploy-development:
     jobs:
-      - check-code-formatting:
-          context: api-nuget-token-context
+      - check-code-formatting
+      - build-and-test
+      - assume-role-development:
+          context: 
+            - api-assume-role-housing-development-context
+            - SonarCloud
+          requires:
+            - build-and-test
+          filters: 
+            branches:
+              only: develop
+      - terraform-init-and-apply-to-development:
+          requires:
+            - assume-role-development
+          filters:
+            branches:
+              only: develop
+      - migrate-database-development:
+          requires:
+            - terraform-init-and-apply-to-development
+          filters:
+            branches:
+              only: develop
+      - deploy-to-development:
+          requires:
+            - migrate-database-development
+          filters:
+            branches:
+              only: develop
+  check-and-deploy-staging-and-production:
+    jobs:
       - build-and-test:
-          context: api-nuget-token-context
-  #    - assume-role-development:
-  #        context: api-assume-role-housing-development-context
-  #        requires:
-  #          - build-and-test
-  #        filters:
-  #          branches:
-  #            only: master
-  #    - terraform-init-and-apply-to-development:
-  #        requires:
-  #          - assume-role-development
-  #        filters:
-  #          branches:
-  #            only: master
-  #    - deploy-to-development:
-  #        context: api-nuget-token-context
-  #        requires:
-  #          - terraform-init-and-apply-to-development
-  #        filters:
-  #          branches:
-  #            only: master
-  #check-and-deploy-staging-and-production:
-  #    jobs:
-  #    - check-code-formatting:
-  #        context: api-nuget-token-context
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - build-and-test:
-  #        context: api-nuget-token-context
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - assume-role-staging:
-  #        context: api-assume-role-housing-staging-context
-  #        requires:
-  #            - build-and-test
-  #        filters:
-  #           branches:
-  #             only: release
-  #    - terraform-init-and-apply-to-staging:
-  #        requires:
-  #          - assume-role-staging
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - deploy-to-staging:
-  #        context: api-nuget-token-context
-  #        requires:
-  #          - terraform-init-and-apply-to-staging
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - permit-production-terraform-release:
-  #        type: approval
-  #        requires:
-  #          - deploy-to-staging
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - assume-role-production:
-  #        context: api-assume-role-housing-production-context
-  #        requires:
-  #            - permit-production-terraform-release
-  #        filters:
-  #           branches:
-  #             only: release
-  #    - terraform-init-and-apply-to-production:
-  #        requires:
-  #          - assume-role-production
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - permit-production-release:
-  #        type: approval
-  #        requires:
-  #          - deploy-to-staging
-  #          - terraform-init-and-apply-to-production
-  #        filters:
-  #          branches:
-  #            only: release
-  #    - deploy-to-production:
-  #        context: api-nuget-token-context
-  #        requires:
-  #          - permit-production-release
-  #          - terraform-init-and-apply-to-production
-  #        filters:
-  #          branches:
-  #            only: release
+          filters:
+            branches:
+              only: master
+      - assume-role-staging:
+          context:
+            - api-assume-role-staging-context
+            - SonarCloud
+          requires:
+            - build-and-test
+          filters:
+            branches:
+              only: master
+      - terraform-init-and-apply-to-staging:
+          requires:
+            - assume-role-staging
+          filters:
+            branches:
+              only: master
+      - migrate-database-staging:
+          requires:
+            - terraform-init-and-apply-to-staging
+          filters:
+            branches:
+              only: master
+      - deploy-to-staging:
+          requires:
+            - migrate-database-staging
+          filters:
+            branches:
+              only: master
+      - permit-production-terraform-release:
+          type: approval
+          requires:
+            - deploy-to-staging
+      - assume-role-production:
+          context: api-assume-role-housing-production-context
+          requires:
+            - permit-production-terraform-release
+          filters:
+            branches:
+              only: master
+      - migrate-database-production:
+          requires:
+            - terraform-init-and-apply-to-production
+          filters:
+            branches:
+              only: master
+      - terraform-init-and-apply-to-production:
+          requires:
+            - assume-role-production
+          filters:
+            branches:
+              only: master
+      - deploy-to-production:
+          requires:
+            - migrate-database-production
+          filters:
+            branches:
+              only: master
