--- a/DirectDebitSubmission/DirectDebitSubmission.csproj
+++ b/DirectDebitSubmission/DirectDebitSubmission.csproj
@@ -41,4 +41,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
+    
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
 </Project>
