--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,7 @@ services:
       dockerfile: BaseListener.Tests/Dockerfile
       args:
         - LBHPACKAGESTOKEN=${LBHPACKAGESTOKEN}
+        - SONAR_TOKEN=${SONAR_TOKEN}
     environment:
       - ENVIRONMENT=LocalDevelopment
       # Alter if not using DynamoDb
@@ -44,4 +45,3 @@ services:
     image: amazon/dynamodb-local
     ports:
       - 8000:8000
-      
